Batman Forever 1.02 & 2.02
Baywatch 3.00 Dutch & 4.00 England & 4.00 Dutch
Black Belt (Bally) Squawk & Talk (revision 7/10/86 and 7/16/86)
Bone Busters (French)
Breakshot 1.2
Chicago Cubs Triple Play (alternate set)
Corvette LX-2 & LA-1
Creature from the Black Lagoon P-3
Cue Ball Wizard rev.2 & rev.3
Cyclone L-1
Diner LU-2
Fire L-2
Flash L-2 (yellow flipper ROMs)
Funhouse L-2
Godzilla 0.90 & 1.00
Guns n Roses 3.00 French
Hyperball L-2
Independence Day 2.01 & French/Display 2.00
Indiana Jones P-2
Indy 500 1.0R
Joust L-1
Jungle Lord L-1 & New Tricks Home ROMs by A.M. Thurnherr
Kiss prototype v.2 (not working yet)
Laser War 8.1
Mars - God of War French
Monopoly 2.51 (Italian display)
Monster Bash 0.5
Monte Carlo (alternate set)
No Fear 1.1X
No Good Gofers 1.2
Party Animal (German)
Phantom of the Opera 2.9
Pinbot P-4 & L-5 mod
Pistol Poker R01
Pool Sharks LA-5
Popeye LA-4
Punchy the Clown R03
Raven (alternate set)
Riverboat Gambler PA-7
Robocop 3.0
Rotation VIII v.1.01 & 1.15
STTNG P-8 & L-3
Secret Service 4.2 (alternate sound)
Soccer Kings (alternate set)
Corrected display rom for South Park 0.90
Space Jam 2.00
Space Shuttle L-3
Spring Break (alternate set)
Star Trek 25th Anniversary 1.17
Starship Troopers 2.00
Still Crazy L-1
Strikes n' Spares rev.2
Swords of Fury L-1
Taxi P-5
Theatre of Magic 1.3 (French)
Thunderball P-1 & P-2 & P-3
Time Machine 1.8 German
Tommy 1.02
Torpedo Alley 1.6
Viper Night Drivin' v1.02
Volcano (Sound Only, alternate version 2)
World Cup Soccer '94 LA-2
X-Files 2.00



Version 2.5 (June 5, 2012) - "Playmatics on the loose!"
------------------------------------------------------------------------------
A lot of work has been done on Playmatic.  I was happy enough to simply be able to play the games, but then Gerrit went ahead and got the sound working too!  We're still looking for roms for Playmatic Stop Ship and Playmatic Phantom Ship so if you see those, let us know please.