@@ -66,7 +66,8 @@ Fire L-2
 Flash L-2 (yellow flipper ROMs)
 Funhouse L-2
 Godzilla 0.90 & 1.00
-Guns n Roses 3.00 French
+Guns n' Roses 3.00 French
+Guns n' Roses 3.00 Dutch
 Hyperball L-2
 Independence Day 2.01 & French/Display 2.00
 Indiana Jones P-2
